test(course): Simplify repository tests